[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reliability-analyzer"
version = "2025.12.21171415"
description = "A new package that analyzes user queries about AI tool reliability and generates structured insights. It takes a text input, such as a question or comment about AI code editor performance issues, and"
readme = "README.md"
authors = [{ name = "ai-reliability-analyzer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/ai-reliability-analyzer"
